[gd_scene load_steps=3 format=3 uid="uid://qlbo22iiyo34"]

[ext_resource type="Script" path="res://K9/Assets/TextBox/text_box_controller.gd" id="1_eqjo5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_584x6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 3
shadow_offset = Vector2(-4, 5)

[node name="Text_Box" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -349.0
offset_top = 103.0
offset_right = 351.0
offset_bottom = 303.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_584x6")
script = ExtResource("1_eqjo5")

[node name="TextStart" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "*"

[node name="TextBody" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 13.0
offset_right = 637.0
offset_bottom = 179.755
text = "Paceholder text"

[node name="TextEnd" type="Label" parent="."]
layout_mode = 0
offset_left = 654.0
offset_top = 172.0
offset_right = 694.0
offset_bottom = 195.0
text = "*"
